test/syc/bad/conflqualvolatile.c
/*
 * Conflicting type '^volatile int' for 'i', previously declared as '^int'.
 */

int *i;
volatile int *i;
